// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionModal should show the action modal when user has logged in with local explore on fees step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="fees"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <tableinvoice-stub
      amount="0"
      bonddenom="uatom"
      estimatedfee="0"
    />
     
    <!---->
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local explore on sign step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <!---->
     
    <form>
      <tmformgroup-stub
        class="action-modal-group"
        fieldid="password"
        fieldlabel="Password"
      >
        <tmfield-stub
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </tmformgroup-stub>
    </form>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Submit"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local explore sending 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <!---->
     
    <form>
      <tmformgroup-stub
        class="action-modal-group"
        fieldid="password"
        fieldlabel="Password"
      >
        <tmfield-stub
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </tmformgroup-stub>
    </form>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Sending..."
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local explore waiting for inclusion 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="send"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <tmdatamsg-stub
      icon="hourglass_empty"
    >
      <div>
        
          Sent and confirming
        
      </div>
       
      <div>
        
          The transaction
          
          was successfully signed and sent the network. Waiting for it to be
          confirmed.
        
      </div>
    </tmdatamsg-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local extension on fees step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="fees"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <tableinvoice-stub
      amount="0"
      bonddenom="uatom"
      estimatedfee="0"
    />
     
    <!---->
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local extension on sign step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <!---->
     
    <form>
      <tmformgroup-stub
        class="action-modal-group"
        fieldid="password"
        fieldlabel="Password"
      >
        <tmfield-stub
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </tmformgroup-stub>
    </form>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Submit"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local extension sending 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <!---->
     
    <form>
      <tmformgroup-stub
        class="action-modal-group"
        fieldid="password"
        fieldlabel="Password"
      >
        <tmfield-stub
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </tmformgroup-stub>
    </form>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Sending..."
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local extension waiting for inclusion 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="send"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <tmdatamsg-stub
      icon="hourglass_empty"
    >
      <div>
        
          Sent and confirming
        
      </div>
       
      <div>
        
          The transaction
          
          was successfully signed and sent the network. Waiting for it to be
          confirmed.
        
      </div>
    </tmdatamsg-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local ledger on fees step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="fees"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <tableinvoice-stub
      amount="0"
      bonddenom="uatom"
      estimatedfee="0"
    />
     
    <!---->
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local ledger on sign step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <!---->
     
    <form>
      <tmformgroup-stub
        class="action-modal-group"
        fieldid="password"
        fieldlabel="Password"
      >
        <tmfield-stub
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </tmformgroup-stub>
    </form>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Submit"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local ledger sending 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <!---->
     
    <form>
      <tmformgroup-stub
        class="action-modal-group"
        fieldid="password"
        fieldlabel="Password"
      >
        <tmfield-stub
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </tmformgroup-stub>
    </form>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Sending..."
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local ledger waiting for inclusion 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="send"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <tmdatamsg-stub
      icon="hourglass_empty"
    >
      <div>
        
          Sent and confirming
        
      </div>
       
      <div>
        
          The transaction
          
          was successfully signed and sent the network. Waiting for it to be
          confirmed.
        
      </div>
    </tmdatamsg-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local local on fees step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="fees"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <tableinvoice-stub
      amount="0"
      bonddenom="uatom"
      estimatedfee="0"
    />
     
    <!---->
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local local on sign step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <!---->
     
    <form>
      <tmformgroup-stub
        class="action-modal-group"
        fieldid="password"
        fieldlabel="Password"
      >
        <tmfield-stub
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </tmformgroup-stub>
    </form>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Submit"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local local sending 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <!---->
     
    <form>
      <tmformgroup-stub
        class="action-modal-group"
        fieldid="password"
        fieldlabel="Password"
      >
        <tmfield-stub
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </tmformgroup-stub>
    </form>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Sending..."
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local local waiting for inclusion 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <steps-stub
      activestep="send"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <tmdatamsg-stub
      icon="hourglass_empty"
    >
      <div>
        
          Sent and confirming
        
      </div>
       
      <div>
        
          The transaction
          
          was successfully signed and sent the network. Waiting for it to be
          confirmed.
        
      </div>
    </tmdatamsg-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user hasn't logged in 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Sign in required
      
    </span>
     
    <steps-stub
      activestep="details"
      steps="Details,Fees,Sign,Send"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <p>
      You need to sign in to submit a transaction.
    </p>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Sign In"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;
